<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Disassembler</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
    <string name="pickFromSdcard">Pick From Sdcard</string>
    <string name="pickFromInstalled">Pick From Installed</string>
    <string name="error">ERROR</string>
    <string name="pickSo">Please pick .so</string>
    <string name="noFile">No File Manager Found.</string>
    <!--string name="noSo">No .so Found.</string-->
    <string name="symbols">Symbols</string>
    <string name="objects">Objects</string>
    <string name="ownedVtable">Owned Vtable</string>
    <string name="targetClass">Target Class</string>
    <string name="argumentsName">Arguments:</string>
    <string name="className">Class:</string>
    <string name="typeName">Type:</string>
    <string name="mainName">Name:</string>
    <string name="nameDemangler">Name Demangler</string>
    <string name="tools">Tools</string>
    <string name="general">General</string>
    <string name="others">Others</string>
    <string name="save">Save</string>
    <string name="saveSymbols">Save Symbols</string>
    <string name="usePattern">Use Pattern</string>
    <string name="about">About</string>
    <string name="againToExit">Press again to exit.</string>
    <string name="demangle">Demangle</string>
    <string name="symbolsActivity">Symbols</string>
    <string name="menuActivity">Menu</string>
    <string name="searchActivity">Search</string>
    <string name="symbolActivity">Symbol</string>
    <string name="classActivity">Class</string>
    <string name="vtableActivity">vtable for </string>
    <string name="demanglerActivity">Name Demangler</string>
    <string name="savedIn">All files will be saved in:</string>
    <string name="symbols_menu">Symbols Menu</string>
    <string name="paste_text_here">Paste text here</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="donate">Donate</string>
    <string name="copyright">© 2019 Тимашков Иван</string>
    <string name="about_view_github">Github Page</string>
    <string name="thanks">Thanks</string>
</resources>
