<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/tools"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="match_parent"
		android:textColor="#D5281E"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"/>

	<LinearLayout
		android:onClick="toNameDemangler"
		android:layout_width="match_parent"
		android:layout_height="55dp"
		android:layout_margin="10dp"
		android:gravity="left|center">

		<ImageView
			android:layout_width="35dp"
			android:layout_height="35dp"
			android:id="@+id/imageViewNameDemangler"
			android:src="@drawable/objects"
			android:paddingLeft="5dp"
			android:paddingTop="5dp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:text="@string/nameDemangler"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_toRightOf="@id/imageViewNameDemangler"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

	</LinearLayout>

	<View
		android:background="?android:attr/dividerVertical"
		android:layout_height="1dp"
		android:layout_width="match_parent"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:onClick="showFloatingMenu"
		android:layout_height="55dp"
		android:layout_margin="10dp"
		android:gravity="left|center">

		<ImageView
			android:layout_width="35dp"
			android:layout_height="35dp"
			android:src="@drawable/box_pink"
			android:paddingLeft="5dp"
			android:id="@+id/imageViewFloatingMenu"
			android:paddingTop="5dp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:text="@string/floatingMenu"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_toRightOf="@id/imageViewFloatingMenu"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

	</LinearLayout>

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/others"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="match_parent"
		android:textColor="#D5281E"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:onClick="saveSymbols"
		android:layout_height="55dp"
		android:layout_margin="10dp"
		android:gravity="left|center">

		<ImageView
			android:layout_width="35dp"
			android:layout_height="35dp"
			android:src="@drawable/ic_action_save_alt"
			android:id="@+id/imageViewOutPut"
			android:paddingLeft="5dp"
			android:paddingTop="5dp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:text="@string/saveSymbols"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_toRightOf="@id/imageViewOutPut"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

	</LinearLayout>

</LinearLayout>

