<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_height="wrap_content">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:layout_width="36dp"
					android:layout_height="36dp"
					android:id="@+id/symbolactivityImageView"
					tools:ignore="ContentDescription" />

				<ScrollView
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:layout_height="wrap_content"
					tools:ignore="NestedScrolling">

					<LinearLayout
						android:layout_width="wrap_content"
						android:orientation="vertical"
						android:layout_height="wrap_content">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/symbolactivityTextViewDemangledName"
							android:textIsSelectable="true"
							android:singleLine="true"
							android:textAppearance="?android:attr/textAppearanceLarge"/>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/symbolactivityTextViewName"
							android:textIsSelectable="true"
							android:singleLine="true"
							android:textAppearance="?android:attr/textAppearanceLarge"
							android:layout_marginTop="2dp"/>

					</LinearLayout>

				</ScrollView>

			</LinearLayout>

			<View
				android:background="?android:attr/dividerVertical"
				android:layout_height="1dp"
				android:layout_width="match_parent"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/typeName"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#D81B60"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/symbolactivityTextViewType"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_marginLeft="10dp"
					android:layout_marginStart="10dp" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp">

				<TextView
					android:layout_width="wrap_content"
					android:text="@string/className"
					android:textColor="#D81B60"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/symbolactivityTextClass"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_marginLeft="10dp"
					android:layout_marginStart="10dp" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp">

				<TextView
					android:layout_width="wrap_content"
					android:textColor="#D81B60"
					android:text="@string/mainName"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/symbolactivityTextViewSymbolMainName"
					android:layout_marginLeft="10dp"
					android:layout_marginStart="10dp" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp">

				<TextView
					android:layout_width="wrap_content"
					android:text="@string/argumentsName"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#D81B60"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/symbolactivityTextViewArguments"
					android:layout_marginLeft="10dp"
					android:layout_marginStart="10dp" />

			</LinearLayout>

			<View
				android:background="?android:attr/dividerVertical"
				android:layout_height="1dp"
				android:layout_width="match_parent"/>

		</LinearLayout>

	</ScrollView>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="90dp"
		android:layout_marginBottom="120dp"
		android:background="#CCCCCC"
		android:visibility="gone"
		android:id="@+id/symbolactivityTextViewButtonFloat"
		android:text="@string/ownedVtable"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="90dp" />

	<com.gc.materialdesign.views.ButtonFloat
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="30dp"
		android:background="#D81B60"
		materialdesign:iconDrawable="@drawable/box_blue"
		android:layout_marginBottom="100dp"
		android:onClick="toVtableActivity"
		android:id="@+id/symbolactivityButtonFloat"
		android:visibility="gone"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="30dp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="90dp"
		android:layout_marginBottom="50dp"
		android:background="#CCCCCC"
		android:visibility="gone"
		android:id="@+id/symbolactivityTextViewButtonFloatClass"
		android:text="@string/targetClass"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="90dp" />

	<com.gc.materialdesign.views.ButtonFloat
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="30dp"
		android:background="#008577"
		materialdesign:iconDrawable="@drawable/objects"
		android:layout_marginBottom="30dp"
		android:onClick="toClassActivity"
		android:id="@+id/symbolactivityButtonFloatClass"
		android:visibility="gone"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="30dp" />

</RelativeLayout>

